--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,13 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+// html, body {
+//   height: 100%;
+// }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +15,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  
 }
+
+// body {
+//   background: url('./assets/bg.svg') no-repeat;
+//   background-size: 100vw auto;
+// }
+// @media (orientation: portrait) {
+//   body {
+//       background-size: auto 100vh;
+//   }
+// }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
