--- a/client/src/components/InputFloatingLabel/InputFloatingLabel.module.scss
+++ b/client/src/components/InputFloatingLabel/InputFloatingLabel.module.scss
@@ -1,9 +1,9 @@
-.InputGroup {
-    width: 50%;
+.InputWrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 2rem 0;
+    margin: 2rem 1rem;
 
     .Input {
         border: none;
@@ -12,6 +12,12 @@
         background: inherit;
         color: inherit;
         padding: 0.2em 0.2em;
+        // width: 45%;
+        width: 100%;
+
+        // &.FullWidth {
+        //     width: 100%;
+        // }
     }
 }
 
@@ -22,7 +28,7 @@
     position: absolute;
     left: 0;
     transition: transform .5s;
-    transform: translate(0, -2px) scale(1);
+    transform: translate(0, 0px) scale(1);
     cursor: text;
 
     &.Focused {
