--- a/client/src/components/NewTournamentForm/NewTournamentForm.module.scss
+++ b/client/src/components/NewTournamentForm/NewTournamentForm.module.scss
@@ -1,7 +1,29 @@
 .Form {
-    // width: 80%;
-    // margin: 3rem auto;
     width: 100%;
     padding: 3rem;
-    
+    display: flex;
+    flex-direction: column;
+
+    .InputGroup {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    input[type="submit"] {
+        align-self: flex-end;
+        margin-right: 1rem;
+        padding: 0.5rem 1.6rem;
+        background: transparent;
+        color: #dd892f;
+        border: 1px solid #dd892f;
+        font-weight: bold;
+        cursor: pointer;
+
+        &:hover {
+            background: #dd892f;
+            color: #000036;
+        }
+    }
 }
+
