--- a/client/src/components/InputFloatingLabel/InputFloatingLabel.module.scss
+++ b/client/src/components/InputFloatingLabel/InputFloatingLabel.module.scss
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 2rem 1rem;
+    margin: 1rem 1rem;
 
     .Input {
         border: none;
-        border-bottom: 1px solid #DD892F;
+        // border-bottom: 1px solid #DD892F;
+        border-bottom: 1px solid;
         font-size: 1.2rem;
         background: inherit;
         color: inherit;
@@ -25,6 +26,7 @@
 
 
 .Label {
+    color: inherit;
     position: absolute;
     left: 0;
     transition: transform .5s;
