--- a/client/src/pages/NewTourrnamentPage/NewTourrnamentPage.module.scss
+++ b/client/src/pages/NewTourrnamentPage/NewTourrnamentPage.module.scss
@@ -9,11 +9,16 @@
 
 
 
-    background: url("../../assets/bg.svg") center center no-repeat;
-    // background-size: 100% 100%;
+    background: #010648;
+    background: url("../../assets/bg.jpg") no-repeat;
     background-size: cover;
+    background-position: center;
+}
 
-
+@media (orientation: portrait) {
+    .Container {
+        background-size: auto 100vh;
+    }
 }
 
 .ContentWrapper {
@@ -27,5 +32,9 @@
     box-shadow: 0px 0px 51px -11px rgba(0,0,0,0.83);
 	color: #DD892F;
 	// padding: 6rem 1rem;
-	/* position: relative; */
+    /* position: relative; */
+    
+    h1 {
+        margin-top: .5rem;
+    }
 }
