--- a/client/src/pages/TournamentPage/TournamentPage.module.scss
+++ b/client/src/pages/TournamentPage/TournamentPage.module.scss
@@ -1,12 +1,12 @@
 .Container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
     position: relative;
-    background: #010648;
+    // background: #010648;
     // background: url("../../assets/bg.jpg") no-repeat;
     background-size: cover;
     background-position: center;
