--- a/client/src/pages/TournamentPage/TournamentPage.module.scss
+++ b/client/src/pages/TournamentPage/TournamentPage.module.scss
@@ -6,8 +6,19 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    // background: #010648;
-    // background: url("../../assets/bg.jpg") no-repeat;
+    background: #010648;
+    background: url("../../assets/bg.jpg") no-repeat;
     background-size: cover;
     background-position: center;
+    color: #dd892f;
+}
+
+.SpinnerWrapper {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #010648;
 }
