--- a/client/src/components/MatchUpContainer/MatchUpContainer.module.scss
+++ b/client/src/components/MatchUpContainer/MatchUpContainer.module.scss
@@ -6,7 +6,7 @@
     min-height: 50px;
     align-items: center;
 
-    &:hover {
+    &.AdminMatchUp:hover {
         background: #dd892f42;
         cursor: pointer;
     }
