Now possible to play whole tournament

--- a/client/src/components/PoolRoundWrapper/PoolRoundWrapper.module.scss
+++ b/client/src/components/PoolRoundWrapper/PoolRoundWrapper.module.scss
@@ -1,5 +1,5 @@
 .PoolRoundWrapper {
-    margin: 0 1rem;
+    // margin: 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
