--- a/client/src/components/MatchUpContainer/MatchUpContainer.module.scss
+++ b/client/src/components/MatchUpContainer/MatchUpContainer.module.scss
@@ -7,6 +7,10 @@
     align-items: center;
     padding: 0 6px;
 
+
+    // ???????????
+    margin: .5rem 0;
+
     &.AdminMatchUp:hover {
         background: #dd892f42;
         cursor: pointer;
@@ -28,6 +32,10 @@
         padding: 6px 12px;
         font-weight: bold;
         position: relative;
+
+        @media screen and (max-width: 1500px) {
+            width: 110px;
+        }
 
         p {
             overflow: hidden;
