--- a/client/src/components/PoolItem/PoolItem.module.scss
+++ b/client/src/components/PoolItem/PoolItem.module.scss
@@ -2,11 +2,21 @@
     border: 1px solid #dd892f;
     min-width: 330px;
     // min-height: 250px;
-    margin: 1rem 0;
+    margin: .5rem;
     // min-height: 33%;
     position: relative;
     background: rgba(0, 0, 54, .74);
     height: 100%;
+
+    // ???????????????
+    height: max-content;
+    // padding: .5rem 0;
+
+    min-height: 170px;
+
+    @media screen and (max-width: 1500px) {
+        min-width: 280px;
+    }
 
     .PoolType {
         position: relative;
