--- a/client/src/components/PoolsWrapper/PoolsWrapper.module.scss
+++ b/client/src/components/PoolsWrapper/PoolsWrapper.module.scss
@@ -3,6 +3,8 @@
     flex-direction: row;
     position: relative;
     justify-content: space-between;
-    margin: 5rem 0;
+    // justify-content: space-evenly;
+    margin: 2rem 0;
     width: 100%;
+    padding: 0 1rem;
 }
