--- a/client/src/components/UpdateMatchContainer/UpdateMatchContainer.module.scss
+++ b/client/src/components/UpdateMatchContainer/UpdateMatchContainer.module.scss
@@ -1,6 +1,7 @@
 .UpdateContainer {
     width: 100%;
-    color: #555;
+    // color: #555;
+    color: #dd892f;
     
     form {
         display: flex;
@@ -13,6 +14,7 @@
             justify-content: space-between;
             align-items: center;
             margin: 1rem;
+            font-size: 1.1rem;
             // padding: 0 .9rem;
 
             label {
@@ -24,6 +26,14 @@
                 padding: .8em .7em;
                 border-radius: 6px;
                 border: 1px solid silver;
+            }
+
+            p {
+                width: 45%;
+                text-align: center;
+                background: #fff;
+                border-radius: 6px;
+                color: #555;
             }
         }
     }
