--- a/client/src/pages/TournamentPage/TournamentPage.module.scss
+++ b/client/src/pages/TournamentPage/TournamentPage.module.scss
@@ -11,6 +11,9 @@
     background-size: cover;
     background-position: center;
     color: #dd892f;
+    font-size: .9rem;
+
+    overflow-x: auto;
 }
 
 .SpinnerWrapper {
@@ -22,3 +25,53 @@
     align-items: center;
     background: #010648;
 }
+
+.SettingsContainer {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    font-size: 1.5rem;
+
+    .Icon {
+        cursor: pointer;
+
+        &:hover {
+            transform: scale(1.15);
+        }
+    }
+}
+
+.PopUp {
+	position: absolute;
+	border: 1px solid;
+	right: 4px;
+	top: 48px;
+	padding: 0.7rem 0.5rem;
+	background: transparent;
+	color: #dd892f;
+	font-weight: bold;
+    cursor: pointer;
+    z-index: 1000;
+    width: max-content;
+    
+    &:before {
+        content:"";
+        position: absolute;
+        right: -2px;
+        top: -10px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 10px 10px 10px;
+        border-color: transparent transparent #dd892f transparent;
+        z-index:9999;
+    }
+
+    &:hover {
+        background: #dd892f;
+        color: #010137;
+        border-color: #dd892f #dd892f #dd892f #dd892f;
+    }
+}
+
+
