Add some validation for create page and match update

--- a/client/src/components/PoolItem/PoolItem.module.scss
+++ b/client/src/components/PoolItem/PoolItem.module.scss
@@ -5,7 +5,8 @@
     margin: .5rem;
     // min-height: 33%;
     position: relative;
-    background: rgba(0, 0, 54, .74);
+    // background: rgba(0, 0, 54, .74);
+    background: rgba(0, 0, 54, 0.87);
     height: 100%;
 
     // ???????????????
