--- a/client/src/components/UpdateMatchContainer/UpdateMatchContainer.module.scss
+++ b/client/src/components/UpdateMatchContainer/UpdateMatchContainer.module.scss
@@ -36,5 +36,11 @@
                 color: #555;
             }
         }
+
+        .ErrorMsg {
+            align-self: flex-end;
+            margin-right: 1rem;
+            color: red;
+        }
     }
 }
