--- a/client/src/pages/TournamentPage/TournamentPage.module.scss
+++ b/client/src/pages/TournamentPage/TournamentPage.module.scss
@@ -42,7 +42,7 @@
 }
 
 .PopUp {
-	position: absolute;
+	// position: absolute;
 	border: 1px solid;
 	right: 4px;
 	top: 48px;
@@ -54,18 +54,18 @@
     z-index: 1000;
     width: max-content;
     
-    &:before {
-        content:"";
-        position: absolute;
-        right: -2px;
-        top: -10px;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 0 10px 10px 10px;
-        border-color: transparent transparent #dd892f transparent;
-        z-index:9999;
-    }
+    // &:before {
+    //     content:"";
+    //     position: absolute;
+    //     right: -2px;
+    //     top: -10px;
+    //     width: 0;
+    //     height: 0;
+    //     border-style: solid;
+    //     border-width: 0 10px 10px 10px;
+    //     border-color: transparent transparent #dd892f transparent;
+    //     z-index:9999;
+    // }
 
     &:hover {
         background: #dd892f;
