--- a/client/src/components/Modal/Modal.module.scss
+++ b/client/src/components/Modal/Modal.module.scss
@@ -18,6 +18,14 @@
 	padding: 1rem;
 	min-width: 30%;
 	min-height: 30%;
+
+	@media screen and (max-width: 1000px) {
+		min-width: 80%;
+		min-height: 210px;
+	}
+	@media screen and (max-width: 800px) {
+		min-width: 90%;
+	}
 }
 
 .ModalButtons {
