--- a/client/src/components/PoolRoundWrapper/PoolRoundWrapper.module.scss
+++ b/client/src/components/PoolRoundWrapper/PoolRoundWrapper.module.scss
@@ -4,4 +4,9 @@
     flex-direction: column;
     justify-content: center;
     min-height: 660px;
+
+    @media screen and (max-width: 1000px) {
+        min-height: 0;
+        margin: 2rem 0;
+    }
 }
