--- a/client/src/components/UptadeMatchModal/UpdateMatchModal.module.scss
+++ b/client/src/components/UptadeMatchModal/UpdateMatchModal.module.scss
@@ -31,6 +31,15 @@
 	color: #dd892f;
 	box-shadow: 0px 0px 15px #dd892f;
 	border-radius: 10px;
+
+	@media screen and (max-width: 1000px) {
+		min-width: 400px;
+		min-height: 300px;
+	}
+	@media screen and (max-width: 500px) {
+		min-width: 310px;
+		min-height: 250px;
+	}
 }
 
 
