--- a/client/src/pages/NewTourrnamentPage/NewTourrnamentPage.module.scss
+++ b/client/src/pages/NewTourrnamentPage/NewTourrnamentPage.module.scss
@@ -22,9 +22,18 @@
 	align-items: center;
     background-color: #000036;
     box-shadow: 0px 0px 51px -11px rgba(0,0,0,0.83);
-	color: #DD892F;
+    color: #DD892F;
+    
+    @media screen and (max-width: 1200px) {
+        width: 80%;
+    }
+    @media screen and (max-width: 1000px) {
+        width: 95%;
+    }
     
     h1 {
         margin-top: .5rem;
+        text-align: center;
+        padding: 0 1rem;
     }
 }
